new playlist functionality

--- a/ClientApp/app/components/counter/counter.component.html
+++ b/ClientApp/app/components/counter/counter.component.html
@@ -15,7 +15,7 @@
 
     </div>
     <br>
-    <button (click)="sendUrls()">Load</button>
+    <button type="button" class="btn btn-primary btn-lg btn-block" (click)="sendUrls()">Load</button>
 </div>
 
 <div class="container" *ngIf="loaded">
