--- a/ClientApp/app/components/home/home.component.html
+++ b/ClientApp/app/components/home/home.component.html
@@ -2,7 +2,7 @@
 <p>Welcome to your new single-page application, built with:</p>
 <ul>
     <li [routerLinkActive]="['link-active']">
-        <a [routerLink]="['/counter']">
+        <a [routerLink]="['/videos']">
             <span class='glyphicon glyphicon-education'></span> Video
         </a>
     </li>
@@ -14,7 +14,7 @@
 </ul>
 <p>To help you get started, we've also set up:</p>
 <ul>
-    <li><strong>Client-side navigation</strong>. For example, click <em>Counter</em> then <em>Back</em> to return here.</li>
+    <li><strong>Client-side navigation</strong>. For example, click <em>Videos</em> then <em>Back</em> to return here.</li>
     <li><strong>Server-side prerendering</strong>. For faster initial loading and improved SEO, your Angular app is prerendered on the server. The resulting HTML is then transferred to the browser where a client-side copy of the app takes over.</li>
     <li><strong>Webpack dev middleware</strong>. In development mode, there's no need to run the <code>webpack</code> build tool. Your client-side resources are dynamically built on demand. Updates are available as soon as you modify any file.</li>
     <li><strong>Hot module replacement</strong>. In development mode, you don't even need to reload the page after making most changes. Within seconds of saving changes to files, your Angular app will be rebuilt and a new instance injected into the page.</li>
