--- a/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/ClientApp/app/components/navmenu/navmenu.component.html
@@ -18,12 +18,12 @@
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/counter']">
+                    <a [routerLink]="['/videos']">
                         <span class='glyphicon glyphicon-education'></span> Video
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/fetch-data']">
+                    <a [routerLink]="['/playlists']">
                         <span class='glyphicon glyphicon-th-list'></span> Playlist
                     </a>
                 </li>
